# xen-guest-agent

./: .gitlab-ci.yml  Cargo.toml
.github/workflows/: rust-clippy.yml
devscripts/: cargo-freebsd-netlink.toml
guest-metrics/: Cargo.toml
guest-metrics/src/: lib.rs  plugin.rs
guest-metrics/src/vif/: freebsd.rs  linux.rs  mod.rs  xenstore.rs
providers/live-migration-detect/: Cargo.toml
providers/live-migration-detect/src/: lib.rs
providers/provider-clipboard/: Cargo.toml
providers/provider-clipboard/src/: lib.rs  windows.rs  windows_worker.rs
providers/provider-memory/: Cargo.toml
providers/provider-memory/src/: lib.rs  linux.rs  windows.rs
providers/provider-netlink/: Cargo.toml
providers/provider-netlink/src/: lib.rs  rewrite.rs
providers/provider-os/: Cargo.toml
providers/provider-os/src/: lib.rs  unix.rs  windows.rs
providers/provider-simple/: Cargo.toml
providers/provider-simple/src/: lib.rs  original.rs
providers/vif-detect/: Cargo.toml
providers/vif-detect/src/: freebsd.rs  lib.rs  linux.rs  windows.rs
publishers/publisher-console/: Cargo.toml
publishers/publisher-console/src/: lib.rs
publishers/publisher-xenstore/: Cargo.toml
publishers/publisher-xenstore/src/: lib.rs  rfc.rs  std.rs  version.rs
src/: datastructs.rs  logic.rs  main.rs  publisher_xenstore.rs  xenstore_schema_rfc.rs  xenstore_schema_std.rs
src/collector/: mod.rs
src/collector/memory/: bsd.rs
src/collector/net/: mod.rs  netlink.rs
src/metrics/: mod.rs
src/provider/: kernel.rs  mod.rs
src/provider/memory/: linux.rs  mod.rs
src/provider/net/: mod.rs  netlink.rs  pnet.rs
src/publisher/: mod.rs
src/publisher/xenstore/: mod.rs  rfc.rs  std.rs
src/vif_detect/: freebsd.rs  linux.rs  mod.rs
xen-guest-agent/: Cargo.toml  manifest.xml
xen-guest-agent/src/: logic.rs  main.rs  plugins.rs  publisher.rs  windows_debug_logger.rs  windows_service_main.rs
xen-win-clipboard/: Cargo.toml  README.md  manifest.xml
xen-win-clipboard/src/: clipboard.rs  main.rs
xen-win-utils/: Cargo.toml
xen-win-utils/src/: heap.rs  iocp.rs  lib.rs  named_mutex.rs  named_pipe.rs  overlapped.rs  pipe_talker.rs  windows_debug_logger.rs
