[workspace]
package.version = "0.6.0-dev"
package.repository = "https://gitlab.com/xen-project/xen-guest-agent"
package.categories = ["virtualization"]
package.edition = "2021"
resolver = "2"

members = [
  "xen-guest-agent",
  "guest-metrics",
  "providers/provider-os",
  "providers/provider-memory",
  #"providers/provider-netlink",
  "providers/provider-simple",
  "publishers/publisher-xenstore",
  "publishers/publisher-console",
  "xen-win-utils",
  "xen-win-clipboard",
]

[profile.release]
lto = true
debug = "full"
