[package]
name = "guest-metrics"
edition.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
flume.workspace = true
os_info.workspace = true
uuid.workspace = true
event-listener.workspace = true
futures.workspace = true
smol.workspace = true
log.workspace = true

xenstore-rs.workspace = true
