[package]
name = "xen-guest-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
smol.workspace = true
log.workspace = true
flume.workspace = true
event-listener.workspace = true
anyhow.workspace = true
xenstore-rs = { workspace = true, features = ["async-smol"] }

enum_dispatch = "0.3"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = { version = ">=0.10.0", default-features = false }

guest-metrics = { path = "../guest-metrics" }

publisher-console = { path = "../publishers/publisher-console" }
publisher-xenstore = { path = "../publishers/publisher-xenstore" }

provider-memory = { path = "../providers/provider-memory" }
provider-os = { path = "../providers/provider-os" }
provider-simple = { path = "../providers/provider-simple" }
provider-netlink = { path = "../providers/provider-netlink", optional = true }

live-migration-detect = { path = "../providers/live-migration-detect" }

[target.'cfg(target_os = "freebsd")'.dependencies]
sysctl = "0.5.0"

[target.'cfg(target_family = "unix")'.dependencies]
syslog = "6.0"

[target."cfg(windows)".dependencies]
windows-service = "0.8"
xen-win-utils = { path = "../xen-win-utils" }
provider-clipboard = { path = "../providers/provider-clipboard" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
netlink = ["dep:provider-netlink"]
