[package]
name = "xen-win-clipboard"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.76"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
# not sure why explicitly specifying std is needed here
log = { version = "0.4.0", features = ["std"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Memory",
  "Win32_System_Recovery",
] }
xen-win-utils = { path = "../xen-win-utils" }

[build-dependencies]
winres = "0.1"
