[package]
name = "live-migration-detect"
version.workspace = true
edition.workspace = true

[dependencies]
guest-metrics = { path = "../../guest-metrics" }
futures.workspace = true
event-listener.workspace = true
smol.workspace = true
flume.workspace = true
uuid.workspace = true
anyhow.workspace = true
log.workspace = true

xenstore-rs = { workspace = true, features = ["async-smol"] }

[target.'cfg(target_os = "windows")'.dependencies]
xenstore-win = { workspace = true, features = ["smol"] }
