[package]
name = "provider-memory"
version .workspace = true
edition .workspace = true

[dependencies]
guest-metrics = { path = "../../guest-metrics" }
futures .workspace = true
flume .workspace = true
smol .workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_System_SystemInformation"] }
