[package]
name = "provider-os"
edition = "2021"
version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
guest-metrics = { path = "../../guest-metrics" }
smol = "2.0.2"
flume = "0.11.1"

[target.'cfg(unix)'.dependencies]
uname = "0.1.1"
os_info = "3"

[target."cfg(windows)".dependencies]
futures = "0.3.31"
wmi = "0.17"
xen-win-utils = { path = "../../xen-win-utils" }
xenstore-win = { git = "https://github.com/xcp-ng/xenstore-win.git", rev = "810abf29fd98082570388081d88ab40bd44a8fa8", features = ["smol"] }
