[package]
name = "vif-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
guest-metrics = { path = "../../guest-metrics" }

[target.'cfg(target_os = "windows")'.dependencies]
xenstore-rs = "0.8"
xenstore-win = { git = "https://github.com/xcp-ng/xenstore-win.git", rev = "c69a572a820029651437aa1d253d3d51d3b98540", features = ["smol"] }
