[package]
name = "vif-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
guest-metrics = { path = "../../guest-metrics" }

[target.'cfg(target_os = "windows")'.dependencies]
xenstore-rs = "0.8"
xenstore-win = { git = "https://github.com/xcp-ng/xenstore-win.git", rev = "810abf29fd98082570388081d88ab40bd44a8fa8", features = ["smol"] }
