[package]
name = "vif-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
guest-metrics = { path = "../../guest-metrics" }

[target.'cfg(target_os = "windows")'.dependencies]
xenstore-rs = "0.8"
xenstore-win = { git = "https://github.com/xcp-ng/xenstore-win.git", rev = "19b73b6db8e8421c51478d1f2f00ad0e47a651c6", features = ["smol"] }
